# node-hub

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: node-hub-ci-cd.yml  node_hub_test.sh
benches/llms/: llama_cpp_python.yaml  phi4.yaml  qwen2.5.yaml  transformers.yaml
benches/mllm/: phi4.yaml
benches/vlm/: magma.yaml  phi4.yaml  qwen2.5vl.yaml
dora-argotranslate/: pyproject.toml
dora-cotracker/: pyproject.toml
dora-gradio/: demo.yml
dora-internvl/: pyproject.toml
dora-llama-cpp-python/: test.yml
dora-microphone/: README.md
dora-mujoco-husky/: demo.yml
dora-openai-websocket/: Cargo.toml
dora-opus/: pyproject.toml
dora-parler/: pyproject.toml
dora-qwen2-5-vl/: pyproject.toml
dora-rdt-1b/tests/: test_dora_rdt_1b.py
dora-rerun/: README.md
dora-transformers/: README.md  test.yml
dora-vad/: README.md
dynamixel-client/: pyproject.toml
examples/av1-encoding/: dataflow.yml  dataflow_reachy.yml  ios-dev.yaml
examples/camera/: dataflow.yml  dataflow_jupyter.yml  dataflow_rerun.yml
examples/depth_camera/: ios-dev.yaml  realsense-dev.yaml
examples/echo/: dataflow.yml
examples/franka/: camera.yaml
examples/keyboard/: dataflow.yml
examples/lerobot-dataset/: dataset_record.yml  dataset_record_avif.yml  policy_inference.yml
examples/llm/: qwen-dev-interruption.yml  qwen-dev.yml
examples/mcp-host/: dataflow.yml
examples/mediapipe/: realsense-dev.yml  rgb-dev.yml
examples/object-detection/: README.md
examples/openai-server/: dataflow-rust.yml  dataflow.yml  qwenvl.yml
examples/piper/: play_dummy_inference.yml  rdt_1b.yml  record.yml
examples/pyarrow-test/: dataflow.yml
examples/python-multi-env/: dataflow.yml
examples/reachy2/: demo-dev.yml  demo-sam-dev.yml  depth_camera.yaml  pick-place-dev.yml
examples/reachy2-remote/: dataflow_reachy.yml  whisper-dev.yml
examples/rerun-viewer/: dataflow.yml
examples/so100-remote/: no_torque.yml  qwenvl-compression.yml  qwenvl-remote.yml  qwenvl.yml
examples/so101/: arm_gamepad_control.yml  leader_follower.yml
examples/speech-to-speech/: kokoro-dev.yml  outtetts-dev.yml
feetech-client/: pyproject.toml
gamepad/: demo.yml  pyproject.toml
(+61 files in other folders)
