[workspace]
resolver = "3"
members = [
    "dora-mcp-host",
    "dora-mcp-server",
    "dora-record",
    "dora-rerun",
    "terminal-print",
    "openai-proxy-server",
    "dora-kit-car",
    "dora-object-to-pose",
    "dora-mistral-rs",
    "dora-rav1e",
    "dora-dav1d",
    "dora-rustypot",
]

[workspace.package]
version = "0.3.12"
edition = "2024"
rust-version = "1.85.0"
description = "`dora` goal is to be a low latency, composable, and distributed data flow."
documentation = "https://dora-rs.ai"
readme = "./README.md"
license = "Apache-2.0"
repository = "https://github.com/dora-rs/node-hub/"

[workspace.dependencies]
dora-node-api = { version = "0.3.12", default-features = false }
dora-node-api-python = { version = "0.3.12", default-features = false }
dora-operator-api = { version = "0.3.12", default-features = false }
dora-operator-api-macros = { version = "0.3.12" }
dora-operator-api-types = { version = "0.3.12" }
dora-operator-api-python = { version = "0.3.12" }
dora-operator-api-c = { version = "0.3.12" }
dora-node-api-c = { version = "0.3.12" }
dora-core = { version = "0.3.12" }
dora-arrow-convert = { version = "0.3.12" }
dora-tracing = { version = "0.3.12" }
dora-metrics = { version = "0.3.12" }
dora-download = { version = "0.3.12" }
shared-memory-server = { version = "0.3.12" }
communication-layer-request-reply = { version = "0.3.12" }
dora-cli = { version = "0.3.12" }
dora-runtime = { version = "0.3.12" }
dora-daemon = { version = "0.3.12" }
dora-coordinator = { version = "0.3.12" }
dora-ros2-bridge = { version = "0.3.12" }
dora-ros2-bridge-msg-gen = { version = "0.3.12" }
# versioned independently from the other dora crates
dora-message = { version = "0.5.0" }
arrow = { version = "54.2.1" }
arrow-schema = { version = "54.2.1" }
arrow-data = { version = "54.2.1" }
arrow-array = { version = "54.2.1" }
parquet = { version = "54.2.1" }
pyo3 = { version = "0.23", features = [
    "eyre",
    "abi3-py37",
    "multiple-pymethods",
] }
pythonize = "0.23"
git2 = { version = "0.18.0", features = ["vendored-openssl"] }
serde_yaml = "0.9.33"
